添加逻辑回归

--- a/formula/ext/style.tex
+++ b/formula/ext/style.tex
@@ -1,2 +1,9 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper, 12pt]{article}
 \usepackage{amsmath}
+\usepackage{fontspec, xltxtra, xunicode}
+\defaultfontfeatures{Mapping=tex-text}
+\setromanfont{Songti SC}
+\XeTeXlinebreaklocale “zh”
+\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
+
+
