--- a/formula/main.tex
+++ b/formula/main.tex
@@ -1,7 +1,12 @@
+% !TEX program = xelatex
+% !TEX TS-program = xelatex
+% !TEX encoding = UTF-8 Unicode
+
 \input{ext/style}
 
 \begin{document}
 	\include{contents/author}
 	\include{contents/toc}
 	\include{contents/Linear_Regression}
+	\include{contents/Logistic_Regression}
 \end{document}
