--- a/formula/ext/style.tex
+++ b/formula/ext/style.tex
@@ -1,9 +1,10 @@
 \documentclass[a4paper, 12pt]{article}
 \usepackage{amsmath}
 \usepackage{fontspec, xltxtra, xunicode}
-\defaultfontfeatures{Mapping=tex-text}
-\setromanfont{Songti SC}
-\XeTeXlinebreaklocale “zh”
-\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
+	\defaultfontfeatures{Mapping=tex-text}
+	% \setromanfont{Songti SC}  % Mac下使用此句
+	\setromanfont{"[msyh.ttc]"}  % Windows下使用此句
+	\XeTeXlinebreaklocale “zh”
+	\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
 
 
