完成神经网络的图例绘制 & 部分公式

--- a/formula/main.tex
+++ b/formula/main.tex
@@ -5,8 +5,10 @@
 \input{ext/style}
 
 \begin{document}
-	\include{contents/author}
-	\include{contents/toc}
-	\include{contents/Linear_Regression}
-	\include{contents/Logistic_Regression}
+	% \include{contents/author}
+	% \include{contents/toc}
+	% \include{contents/Linear_Regression}
+	% \include{contents/Logistic_Regression}
+	\include{contents/Neural_Networks_legend1}
+	% \include{contents/Neural_Networks}
 \end{document}
