--- a/formula/contents/Logistic_Regression.tex
+++ b/formula/contents/Logistic_Regression.tex
@@ -1,6 +1,7 @@
 \section{逻辑回归(Logistic Regression)}
-
 \subsection{当只有2个类别时，使用1个分类器}
+
+
 预测函数：
 \begin{enumerate}
 \item 数值形式
@@ -65,7 +66,11 @@ Cost Function
 \begin{enumerate}
 \item 线性回归
 \begin{equation}
-	J(\theta) = \frac{1}{2m}\sum_{i=1}^m (h_\theta(x^{(i)})-y^{(i)})^2 + \lambda \frac{1}{2m} \sum_{j=1}^n\theta_j^2
+	J(\theta) = \frac{1}{2m}\sum_{i=1}^m [h_\theta(x^{(i)})-y^{(i)}]^2 + \lambda \frac{1}{2m} \sum_{j=1}^n\theta_j^2
+\end{equation}
+
+\begin{equation}
+	\theta_j = \theta_j(1-\alpha\frac{\lambda}{m}) - \frac{\alpha}{m}\sum_{i=1}^n\left[h_\theta(x)-y\right]x_j^{(i)}
 \end{equation}
 
 \item 逻辑回归
@@ -73,6 +78,10 @@ Cost Function
 	J(\theta) = \frac{1}{m}
 	    \sum_{i=1}^m \left[ -y^{(i)}log{h_\theta(x^{(i)})} - (1-y^{(i)})log{(1-h_\theta(x^{(i)}))} \right]
 		+ \lambda \frac{1}{2m} \sum_{j=1}^n\theta_j^2
+\end{equation}
+
+\begin{equation}
+	\theta_j = \theta_j - \alpha \left[\frac{1}{m}\sum_{i=1}^m [h_\theta(x^{(i)})-y^{(i)}]x_j^{(i)} + \frac{\lambda}{m}\theta_j\right]
 \end{equation}
 \end{enumerate}
 
