--- a/formula/ext/style.tex
+++ b/formula/ext/style.tex
@@ -1,10 +1,14 @@
 \documentclass[a4paper, 12pt]{article}
 \usepackage{amsmath}
-\usepackage{fontspec, xltxtra, xunicode}
+\usepackage{fontspec, xltxtra, xunicode}  % 解决中文问题
 	\defaultfontfeatures{Mapping=tex-text}
-	% \setromanfont{Songti SC}  % Mac下使用此句
-	\setromanfont{"[msyh.ttc]"}  % Windows下使用此句
+	\setromanfont{Songti SC}  % Mac下使用此句
+	% \setromanfont{"[msyh.ttc]"}  % Windows下使用此句
 	\XeTeXlinebreaklocale “zh”
 	\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
+
+\def\pgfsysdriver{pgfsys-dvipdfmx.def}  % 画图用
+\usepackage{tikz}
+
 
 
