部分改为\subsubsection，方便查看

--- a/formula/contents/Linear_Regression.tex
+++ b/formula/contents/Linear_Regression.tex
@@ -74,7 +74,7 @@ y = y
 \end{equation}
 
 
-Cost Function
+\subsubsection{Cost Function}
 \begin{enumerate}
 \item 数值形式：
 \begin{equation}
@@ -87,7 +87,7 @@ Cost Function
 \end{equation}
 \end{enumerate}
 
-梯度下降
+\subsubsection{梯度下降}
 \begin{enumerate}
 \item 数值形式
 \begin{equation}
