部分改为\subsubsection，方便查看

--- a/formula/contents/Logistic_Regression.tex
+++ b/formula/contents/Logistic_Regression.tex
@@ -2,7 +2,7 @@
 \subsection{当只有2个类别时，使用1个分类器}
 
 
-预测函数：
+\subsubsection{预测函数}
 \begin{enumerate}
 \item 数值形式
 \begin{equation}
@@ -16,7 +16,7 @@
 \end{enumerate}
 
 
-Cost Function
+\subsubsection{Cost Function}
 \begin{enumerate}
 \item 数值形式
 \begin{equation}
@@ -32,7 +32,7 @@ Cost Function
 
 
 
-梯度下降
+\subsubsection{梯度下降}
 \begin{enumerate}
 \item 数值形式
 \begin{equation}
