--- a/formula/contents/Neural_Networks_legend1.tex
+++ b/formula/contents/Neural_Networks_legend1.tex
@@ -7,7 +7,7 @@
 }
 
 % x
-% \node[a] (x_0) at(0,10) {+1};
+\node[a] (x_0) at(0,10) {$x_0=+1$};
 \node[a] (x_1) at(0,8) {$x_1$};
 \node[a] (x_2) at(0,6) {$x_2$};
 \node[a] (x_3) at(0,4) {$x_3$};
@@ -17,7 +17,7 @@
 \node[a] (x_n) at(0,0) {$x_n$};
 
 % a^{(1)}
-\node[a] (a_10) at(2,10) {$+1$};
+\node[a] (a_10) at(2,10)   {$a_0^{(1)}$};
 \node[a] (a_11) at(2,8)   {$a_1^{(1)}$};
 \node[a] (a_12) at(2,6) {$a_2^{(1)}$};
 \node[a] (a_13) at(2,4)   {$a_3^{(1)}$};
@@ -74,7 +74,7 @@
 % \draw[->] (a_1s1) -- (a_21);
 
 % 前向算法图例--有标注：a1 -- a_21
-\path (a_10) edge[->] node[auto] {$\theta_{10}^{(1)}$} (a_21);
+
 % \path (a_11) edge[->] node[auto] {$\theta_{11}^{(1)}$} (a_21);
 % \path (a_12) edge[->] node[auto] {$\theta_{12}^{(1)}$} (a_21);
 % \path (a_13) edge[->] node[auto] {$\theta_{13}^{(1)}$} (a_21);
