完成神经网络--前向算法

--- a/formula/ext/style.tex
+++ b/formula/ext/style.tex
@@ -10,7 +10,7 @@
 \def\pgfsysdriver{pgfsys-dvipdfmx.def}  % 画图用
 \usepackage{tikz}
 
-\renewcommand{\thefootnote}{\roman{footnote}}  % 重新定义\footnote命令的格式
+\renewcommand{\thefootnote}{注[\arabic{footnote}]}  % 重新定义\footnote命令的格式
 
 
 
