--- a/formula/main.tex
+++ b/formula/main.tex
@@ -7,8 +7,8 @@
 \begin{document}
 	% \include{contents/author}
 	% \include{contents/toc}
-	\include{contents/Linear_Regression}
-	\include{contents/Logistic_Regression}
+	% \include{contents/Linear_Regression}
+	% \include{contents/Logistic_Regression}
 	\include{contents/Neural_Networks_legend1}
-	\include{contents/Neural_Networks}
-\end{document}前向算法公式
+	\include{contents/Neural_Networks_Forward}
+\end{document}
