--- a/formula/ext/style.tex
+++ b/formula/ext/style.tex
@@ -1,14 +1,16 @@
 \documentclass[a4paper, 12pt]{article}
 \usepackage{amsmath}
-\usepackage{fontspec, xltxtra, xunicode}  % 解决中文问题
+\usepackage{fontspec}  % 解决中文问题
 	\defaultfontfeatures{Mapping=tex-text}
 	\setromanfont{Songti SC}  % Mac下使用此句
 	% \setromanfont{"[msyh.ttc]"}  % Windows下使用此句
 	\XeTeXlinebreaklocale “zh”
 	\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
-
-\def\pgfsysdriver{pgfsys-dvipdfmx.def}  % 画图用
-\usepackage{tikz}
+\usepackage[top=25mm, bottom=20mm, left=25mm, right=20mm]{geometry}  % 设置页边距
+\usepackage{tikz}  % 画图用s
+	\def\pgfsysdriver{pgfsys-dvipdfmx.def}
+\usepackage{xltxtra}
+\usepackage{xunicode}
 
 \renewcommand{\thefootnote}{注[\arabic{footnote}]}  % 重新定义\footnote命令的格式
 
