--- a/formula/contents/Neural_Networks_Forward.tex
+++ b/formula/contents/Neural_Networks_Forward.tex
@@ -45,7 +45,7 @@
 \footnote{从$a^{(1)}$得到$a^{(2)}$需要经过sigmoid()函数，后续的从$a^{(j)}$得到$a^{(j+1)}$均需要经过sigmoid()函数}
 =(1, a^{(1)})(\Theta^{(1)})^T$
 \begin{equation}\begin{aligned}
-	z^{(2)} &= a^{(1)} (\Theta^{(1)})^T \Rightarrow (m,n+1) * (n+1,s_{2})
+	z^{(2)} &= (1, a^{(1)}) (\Theta^{(1)})^T \Rightarrow (m,n+1) * (n+1,s_{2})
 		\\ &= 
 		  \left(\begin{matrix}
 				1 & x_1^{(1)} & x_2^{(1)} & x_3^{(1)} & \dots & x_n^{(1)} \\
@@ -87,9 +87,11 @@
 				z_1^{(2)(2)} & z_2^{(2)(2)} & z_3^{(2)(2)} & \dots & z_{s_2}^{(2)(2)} \\
 				z_1^{(2)(3)} & z_2^{(2)(3)} & z_3^{(2)(3)} & \dots & z_{s_2}^{(2)(3)} \\
 				\vdots & \vdots & \vdots & \ddots & \vdots \\
-				z_1^{(2)(m)} & z_2^{(2)(m)} & z_3^{(2)(m)} & \dots & z_{s_2}^{(2)(m)}\footnote{上式$z_{s_2}^{(2)(m)}$中，$(2)$表示第2层神经网络，$(m)$表示第m个训练集，$s_2$表示第2层神经网络的最后一个单元} \\
-			\end{matrix}\right) \Rightarrow  (m,n+1) * (n+1, s_{2}) = (m,s_2)
+				z_1^{(2)(m)} & z_2^{(2)(m)} & z_3^{(2)(m)} & \dots & z_{s_2}^{(2)(m)} \\
+			\end{matrix}\right)
+		\\ &  \Rightarrow  (m,n+1) * (n+1, s_{2}) = (m,s_2)
 \end{aligned}\end{equation}
+\footnote{上式$z_{s_2}^{(2)(m)}$中，$(2)$表示第2层神经网络，$(m)$表示第m个训练集，$s_2$表示第2层神经网络的最后一个单元}
 
 
 \item $a^{(2)}$
@@ -97,8 +99,7 @@
 	a^{(2)}=g(z^{(2)}) \Rightarrow {(m,s_2)}
 \end{equation}
 
-\item 一般式 \\
-后续同理：
+\item 后续同理 \\
 \begin{equation}\begin{aligned}
 	\Theta^{(2)} &= 
 		\left(\begin{matrix}
@@ -111,6 +112,10 @@
 	z^{(3)} &= (1, a^{(2)}) (\Theta^{(2)})^T \Rightarrow (m,s_2+1) * (s_2+1, s_3) = (m,s_3) \\
 	a^{(3)} &= g(z^{(3)}) \Rightarrow {(m,s_3)} \\
 	& \vdots \\
+\end{aligned} \end{equation}
+
+\item 一般式
+\begin{equation}\begin{aligned}
 	a^{(j)} &= g(z^{(j-1)}) \Rightarrow {(m,s_j)} \\
 	\Theta^{(j)} &= 
 		\left(\begin{matrix}
@@ -120,7 +125,51 @@
 			\vdots    & \vdots    & \vdots    & \ddots & \vdots   \\
 			\theta_{s_{j+1}0}^{(j)} & \theta_{s_{j+1}1}^{(j)} & \theta_{s_{j+1}2}^{(j)} & \dots & \theta_{s_{j+1},s_{j}}^{(j)}
 		\end{matrix}\right) \Rightarrow {(s_{j+1},s_{j}+1)}\\
-	z^{(j+1)} &= (1, a^{(j)}) (\Theta^{(j)})^T \Rightarrow (m,s_j+1) * (s_j+1, s_{j+1}) = (m,s_3) \\
+	z^{(j+1)} &= (1, a^{(j)}) (\Theta^{(j)})^T \\
+		% \\ &= 
+		%   \left(\begin{matrix}
+		% 		1 & x_1^{(1)} & x_2^{(1)} & x_3^{(1)} & \dots & x_n^{(1)} \\
+		% 		1 & x_1^{(2)} & x_2^{(2)} & x_3^{(2)} & \dots & x_n^{(2)} \\
+		% 		1 & x_1^{(3)} & x_2^{(3)} & x_3^{(3)} & \dots & x_n^{(3)} \\
+		% 		\vdots        & \vdots    & \vdots    & \vdots    & \ddots & \vdots   \\
+		% 		1 & x_1^{(m)} & x_2^{(m)} & x_3^{(m)} & \dots & x_n^{(m)} \\
+		% 	\end{matrix}\right)
+		% 	\left(\begin{matrix}
+		% 		\theta_{10}^{(1)} & \theta_{11}^{(1)} & \theta_{12}^{(1)} & \dots & \theta_{1,n}^{(1)} \\
+		% 		\theta_{20}^{(1)} & \theta_{21}^{(1)} & \theta_{22}^{(1)} & \dots & \theta_{2,n}^{(1)} \\
+		% 		\theta_{30}^{(1)} & \theta_{31}^{(1)} & \theta_{32}^{(1)} & \dots & \theta_{3,n}^{(1)} \\
+		% 		\vdots    & \vdots    & \vdots    & \ddots & \vdots   \\
+		% 		\theta_{s_{2},0}^{(j)} & \theta_{s_{2},1}^{(j)} & \theta_{s_{2},2}^{(j)} & \dots & \theta_{s_{2},n}^{(1)}
+		% 	\end{matrix}\right)^T
+		\\ &= 
+		  \left(\begin{matrix}
+				1 & a_1^{(j)(1)} & a_2^{(j)(1)} & a_3^{(j)(1)} & \dots & a_{s_j}^{(j)(1)} \\
+				1 & a_1^{(j)(2)} & a_2^{(j)(2)} & a_3^{(j)(2)} & \dots & a_{s_j}^{(j)(2)} \\
+				1 & a_1^{(j)(3)} & a_2^{(j)(3)} & a_3^{(j)(3)} & \dots & a_{s_j}^{(j)(3)} \\
+				\vdots        & \vdots    & \vdots    & \vdots    & \ddots & \vdots   \\
+				1 & a_1^{(j)(m)} & a_2^{(j)(m)} & a_3^{(j)(m)} & \dots & a_{s_j}^{(j)(m)} \\
+			\end{matrix}\right)
+			\left(\begin{matrix}
+				\theta_{10}^{(j)} & \theta_{20}^{(j)} & \theta_{30}^{(j)} & \dots & \theta_{s_{j+1},0}^{(j)} \\
+				\theta_{11}^{(j)} & \theta_{21}^{(j)} & \theta_{31}^{(j)} & \dots & \theta_{s_{j+1},1}^{(j)} \\
+				\theta_{12}^{(j)} & \theta_{22}^{(j)} & \theta_{32}^{(j)} & \dots & \theta_{s_{j+1},2}^{(j)} \\
+				\theta_{13}^{(j)} & \theta_{23}^{(j)} & \theta_{33}^{(j)} & \dots & \theta_{s_{j+1},3}^{(j)} \\
+				\vdots    & \vdots    & \vdots    & \ddots & \vdots   \\
+				\theta_{1,s_j}^{(j)} & \theta_{2,s_j}^{(j)} & \theta_{3,s_j}^{(j)} & \dots & \theta_{s_{j+1},s_j}^{(j)}
+			\end{matrix}\right)
+		\\ &=
+			\left(\begin{matrix}
+				z^{(j+1)(1)} \\ z^{(j+1)(2)} \\ z^{(j+1)(3)} \\ \vdots \\ z^{(j+1)(m)} 
+			\end{matrix}\right)
+		\\ &= 
+			\left(\begin{matrix}
+				z_1^{(j+1)(1)} & z_2^{(j+1)(1)} & z_3^{(j+1)(1)} & \dots & z_{s_{j+1}}^{(j+1)(1)} \\
+				z_1^{(j+1)(2)} & z_2^{(j+1)(2)} & z_3^{(j+1)(2)} & \dots & z_{s_{j+1}}^{(j+1)(2)} \\
+				z_1^{(j+1)(3)} & z_2^{(j+1)(3)} & z_3^{(j+1)(3)} & \dots & z_{s_{j+1}}^{(j+1)(3)} \\
+				\vdots & \vdots & \vdots & \ddots & \vdots \\
+				z_1^{(j+1)(m)} & z_2^{(j+1)(m)} & z_3^{(j+1)(m)} & \dots & z_{s_{j+1}}^{(j+1)(m)} \\
+			\end{matrix}\right)
+		\\ & \Rightarrow (m,s_j+1) * (s_j+1, s_{j+1}) = (m,s_{j+1}) \\
 	a^{(j+1)} &= g(z^{(j+1)})  \Rightarrow {(m,s_{j+1})} 
 \end{aligned}\end{equation}
 \end{enumerate}
@@ -140,5 +189,5 @@
 	        0 & 0 & 1 & \dots & 0 & 0 \\
 	        \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
 	        1 & 0 & 0 & \dots & 0 & 0 \\
-		\end{matrix}\right)_{m*s_L\footnote{上式$m*s_L$中的$s_L$表示共有$s_L$个分类器，$s_L$表示的是输出层的unit数}}
-\end{aligned}\end{equation}
+		\end{matrix}\right)_{m*s_L}
+\end{aligned}\end{equation}\footnote{上式$m*s_L$中的$s_L$表示共有$s_L$个分类器，$s_L$表示的是输出层的unit数}
