--- a/formula/contents/Neural_Networks_legend1.tex
+++ b/formula/contents/Neural_Networks_legend1.tex
@@ -93,14 +93,15 @@
 % \draw[->] (a_3s3) -- (a_24);
 
 % 前后算法图例--有标注：a3 -- a24
-\path (a_31) edge[->] node[auto] {$\Theta_{14}^{(3)}$} (a_24);
-% \path (a_32) edge[->] node[auto] {$\Theta_{24}^{(3)}$} (a_24);
-% \path (a_33) edge[->] node[auto] {$\Theta_{34}^{(3)}$} (a_24);
-% \path (a_34) edge[->] node[auto] {$\Theta_{44}^{(3)}$} (a_24);
-\path (a_3s3) edge[->] node[auto] {$\Theta_{s14}^{(3)}$} (a_24);
+\path (a_31) edge[->] node[auto] {$\delta_{14}^{(3)}$} (a_24);
+% \path (a_32) edge[->] node[auto] {$\delta_{24}^{(3)}$} (a_24);
+% \path (a_33) edge[->] node[auto] {$\delta_{34}^{(3)}$} (a_24);
+% \path (a_34) edge[->] node[auto] {$\delta_{44}^{(3)}$} (a_24);
+\path (a_3s3) edge[->] node[auto] {$\delta_{s14}^{(3)}$} (a_24);
 
 
 % 下方的标志
-
+\node at (4, 11) {\color{red}{$\Theta^{(1)}$}};
+\node at (8, -1) {\color{red}{$\Delta^{(3)}$}};
 
 \end{tikzpicture}
